--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "git-commit-msg-linter": "^4.4.0",
     "typescript": "^4.9.4"
   }
 }
