chore: add prettier and eslint

--- a/package.json
+++ b/package.json
@@ -4,15 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check:format": "prettier --check .",
+    "check:lint": "eslint --cache .",
+    "check:types": "tsc --noEmit",
+    "fix:format": "prettier --write .",
+    "fix:lint": "eslint --cache --fix .",
+    "build": "./node_modules/.bin/ts-node build.ts",
+    "lint": "eslint . --ext .ts",
+    "start": "node -r module-alias/register ./dist --env=production",
+    "dev": "nodemon",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage",
+    "test:verbose": "npm test -- --passWithNoTests --verbose",
+    "test:staged": "npm test -- --bail --findRelatedTests",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint": "^8.29.0",
+    "eslint-plugin-jest": "^27.1.6",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   }
 }
