--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "check:types": "tsc --noEmit",
     "fix:format": "prettier --write .",
     "fix:lint": "eslint --cache --fix .",
-    "build": "./node_modules/.bin/ts-node build.ts",
-    "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "dev": "nodemon",
+    "build": "tsc",
+    "start": "",
+    "dev": "",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage",
     "test:verbose": "npm test -- --passWithNoTests --verbose",
-    "test:staged": "npm test -- --bail --findRelatedTests",
-    "prepare": "husky install"
+    "test:staged": "npm test -- --bail --findRelatedTests"
   },
   "keywords": [],
   "author": "",
