--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "fix:lint": "eslint --cache --fix .",
     "build": "tsc",
     "start": "",
-    "dev": "",
+    "dev": "tsc && node ./dist/src/index",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage",
@@ -22,7 +22,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/async-csv": "^2.1.1",
     "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.29.0",
@@ -33,6 +35,12 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "async-csv": "^2.1.3",
+    "csv": "^6.2.5"
   }
 }
