refactor: code cleanup

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,7 @@
 {
-  "proseWrap": "always",
-  "semi": false
+	"proseWrap": "always",
+	"semi": false,
+	"singleQuote": true,
+	"tabWidth": 4,
+	"useTabs": true
 }
