--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"fix:format": "prettier --write .",
 		"fix:lint": "eslint --cache --fix .",
 		"build": "tsc",
-		"start": "",
-		"dev": "tsc && node ./dist/src/index",
+		"start": "tsc && node ./dist/src/index",
 		"test": "jest --passWithNoTests --runInBand --no-cache",
 		"test:unit": "npm test -- --watch",
 		"test:coverage": "npm test -- --coverage",
@@ -23,6 +22,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/async-csv": "^2.1.1",
+		"@types/express": "^4.17.15",
 		"@types/jest": "^29.2.4",
 		"@types/node": "^18.11.13",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -41,6 +41,7 @@
 	},
 	"dependencies": {
 		"async-csv": "^2.1.3",
-		"csv": "^6.2.5"
+		"csv": "^6.2.5",
+		"express": "^4.18.2"
 	}
 }
