--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/async-csv": "^2.1.1",
 		"@types/express": "^4.17.15",
 		"@types/jest": "^29.2.4",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.13",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
@@ -42,6 +43,7 @@
 	"dependencies": {
 		"async-csv": "^2.1.3",
 		"csv": "^6.2.5",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"multer": "^1.4.5-lts.1"
 	}
 }
