--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/jest": "^29.2.4",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.13",
+		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"eslint": "^8.29.0",
@@ -44,6 +45,7 @@
 		"async-csv": "^2.1.3",
 		"csv": "^6.2.5",
 		"express": "^4.18.2",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"swagger-ui-express": "^4.6.0"
 	}
 }
